--- a/src/app/app-layout/about/about-story/about-story.component.html
+++ b/src/app/app-layout/about/about-story/about-story.component.html
@@ -1,155 +1,216 @@
-<div class="page-content pb-3">
-  <div class="container">
-      <!-- Phần Giới thiệu -->
-      <div class="row">
-          <div class="col-lg-10 offset-lg-1">
-              <div class="about-text text-center mt-3">
-                  <h2 class="title text-center mb-2">Chúng tôi là ai?</h2>
-                  <p>Chúng tôi là công ty tư vấn visa và xuất nhập cảnh hàng đầu, với nhiều năm kinh nghiệm trong lĩnh vực này. Chúng tôi cam kết mang đến cho khách hàng những dịch vụ chất lượng cao, giúp bạn dễ dàng thực hiện ước mơ du lịch, học tập và làm việc tại nước ngoài.</p>
-                  <img src="assets/images/about/about-2/signature.png" alt="signature" class="mx-auto mb-5">
-                  <img src="assets/images/about/about-2/img-1.jpg" alt="image" class="mx-auto mb-6">
+<!-- Các Quốc Gia Chúng Tôi Cung Cấp Bắt Đầu -->
+<div class="container-fluid country overflow-hidden py-5">
+  <div class="container py-5">
+      <div class="section-title text-center wow fadeInUp" data-wow-delay="0.1s" style="margin-bottom: 70px;">
+          <div class="sub-style">
+              <h5 class="sub-title text-primary px-3">CÁC QUỐC GIA CHÚNG TÔI CUNG CẤP</h5>
+          </div>
+          <h1 class="display-5 mb-4">Dịch vụ nhập cư và visa cho các quốc gia sau</h1>
+          <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at atque sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime veniam necessitatibus saepe in ab? Repellat!</p>
+      </div>
+      <div class="row g-4 text-center">
+          <div class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp" data-wow-delay="0.1s">
+              <div class="country-item">
+                  <div class="rounded overflow-hidden">
+                      <img src="assets/images/country-1.jpg" class="img-fluid w-100 rounded" alt="Image">
+                  </div>
+                  <div class="country-flag">
+                      <img src="assets/images/brazil.jpg" class="img-fluid rounded-circle" alt="Image">
+                  </div>
+                  <div class="country-name">
+                      <a href="#" class="text-white fs-4">Brazil</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp" data-wow-delay="0.3s">
+              <div class="country-item">
+                  <div class="rounded overflow-hidden">
+                      <img src="assets/images/country-2.jpg" class="img-fluid w-100 rounded" alt="Image">
+                  </div>
+                  <div class="country-flag">
+                      <img src="assets/images/india.jpg" class="img-fluid rounded-circle" alt="Image">
+                  </div>
+                  <div class="country-name">
+                      <a href="#" class="text-white fs-4">Ấn Độ</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp" data-wow-delay="0.5s">
+              <div class="country-item">
+                  <div class="rounded overflow-hidden">
+                      <img src="assets/images/country-3.jpg" class="img-fluid w-100 rounded" alt="Image">
+                  </div>
+                  <div class="country-flag">
+                      <img src="assets/images/usa.jpg" class="img-fluid rounded-circle" alt="Image">
+                  </div>
+                  <div class="country-name">
+                      <a href="#" class="text-white fs-4">New York</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6 col-xl-3 mb-5 mb-xl-0 wow fadeInUp" data-wow-delay="0.7s">
+              <div class="country-item">
+                  <div class="rounded overflow-hidden">
+                      <img src="assets/images/country-4.jpg" class="img-fluid w-100 rounded" alt="Image">
+                  </div>
+                  <div class="country-flag">
+                      <img src="assets/images/italy.jpg" class="img-fluid rounded-circle" alt="Image">
+                  </div>
+                  <div class="country-name">
+                      <a href="#" class="text-white fs-4">Ý</a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-12">
+              <a class="btn btn-primary border-secondary rounded-pill py-3 px-5 wow fadeInUp" data-wow-delay="0.1s" href="#">Xem Thêm Quốc Gia</a>
+          </div>
+      </div>
+  </div>
+</div>
+<!-- Các Quốc Gia Chúng Tôi Cung Cấp Kết Thúc -->
+
+<!-- Thống Kê Bắt Đầu -->
+<div class="container-fluid counter-facts overflow-hidden py-5">
+  <div class="container py-5">
+      <div class="row g-4">
+          <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
+              <div class="counter">
+                  <div class="counter-icon">
+                      <i class="fas fa-passport"></i>
+                  </div>
+                  <div class="counter-content">
+                      <h3>Loại Visa</h3>
+                      <div class="d-flex align-items-center justify-content-center">
+                          <span class="counter-value" data-toggle="counter-up">31</span>
+                          <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
+              <div class="counter">
+                  <div class="counter-icon">
+                      <i class="fas fa-users"></i>
+                  </div>
+                  <div class="counter-content">
+                      <h3>Thành Viên Nhóm</h3>
+                      <div class="d-flex align-items-center justify-content-center">
+                          <span class="counter-value" data-toggle="counter-up">377</span>
+                          <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
+              <div class="counter">
+                  <div class="counter-icon">
+                      <i class="fas fa-user-check"></i>
+                  </div>
+                  <div class="counter-content">
+                      <h3>Quy Trình Visa</h3>
+                      <div class="d-flex align-items-center justify-content-center">
+                          <span class="counter-value" data-toggle="counter-up">4.9</span>
+                          <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">K</h4>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
+              <div class="counter">
+                  <div class="counter-icon">
+                      <i class="fas fa-handshake"></i>
+                  </div>
+                  <div class="counter-content">
+                      <h3>Tỷ Lệ Thành Công</h3>
+                      <div class="d-flex align-items-center justify-content-center">
+                          <span class="counter-value" data-toggle="counter-up">98</span>
+                          <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">%</h4>
+                      </div>
+                  </div>
               </div>
           </div>
       </div>
+  </div>
+</div>
+<!-- Thống Kê Kết Thúc -->
 
-      <!-- Phần Dịch vụ -->
-      <div class="row justify-content-center">
-          <div class="col-lg-4 col-sm-6">
-              <div class="icon-box icon-box-sm text-center">
-                  <span class="icon-box-icon">
-                      <i class="icon-puzzle-piece"></i>
-                  </span>
-                  <div class="icon-box-content">
-                      <h3 class="icon-box-title">Chất lượng Dịch vụ</h3>
-                      <p>Chúng tôi cung cấp dịch vụ tư vấn visa chuyên nghiệp, đảm bảo quy trình nhanh chóng và hiệu quả.</p>
-                  </div>
-              </div>
+<!-- Đào Tạo Bắt Đầu -->
+<div class="container-fluid training overflow-hidden bg-light py-5">
+  <div class="container py-5">
+      <div class="section-title text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">
+          <div class="sub-style">
+              <h5 class="sub-title text-primary px-3">KIỂM TRA KHÓA ĐÀO TẠO CỦA CHÚNG TÔI</h5>
           </div>
-
-          <div class="col-lg-4 col-sm-6">
-              <div class="icon-box icon-box-sm text-center">
-                  <span class="icon-box-icon">
-                      <i class="icon-life-ring"></i>
-                  </span>
-                  <div class="icon-box-content">
-                      <h3 class="icon-box-title">Hỗ trợ Chuyên nghiệp</h3>
-                      <p>Đội ngũ chuyên gia của chúng tôi luôn sẵn sàng hỗ trợ bạn 24/7, giải đáp mọi thắc mắc về thủ tục visa.</p>
-                  </div>
-              </div>
-          </div>
-
-          <div class="col-lg-4 col-sm-6">
-              <div class="icon-box icon-box-sm text-center">
-                  <span class="icon-box-icon">
-                      <i class="icon-heart-o"></i>
-                  </span>
-                  <div class="icon-box-content">
-                      <h3 class="icon-box-title">Tận tâm với Khách hàng</h3>
-                      <p>Chúng tôi luôn đặt lợi ích của khách hàng lên hàng đầu, mang đến trải nghiệm dịch vụ tốt nhất.</p>
-                  </div>
-              </div>
-          </div>
+          <h1 class="display-5 mb-4">Nhận Dịch Vụ Đào Tạo Tốt Nhất Với Travisa Của Chúng Tôi</h1>
+          <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at atque sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime veniam necessitatibus saepe in ab? Repellat!</p>
       </div>
-
-      <!-- Phần Thống kê -->
-      <div class="bg-image pt-7 pb-5 pt-md-12 pb-md-9" style="background-image: url(assets/images/backgrounds/bg-4.jpg)">
-          <div class="container">
-              <div class="row">
-                  <div class="col-6 col-md-3">
-                      <div class="count-container text-center">
-                          <div class="count-wrapper text-white">
-                              <span class="count" data-from="0" data-to="40" data-speed="3000" data-refresh-interval="50">0</span>k+
-                          </div>
-                          <h3 class="count-title text-white">Khách hàng Hài lòng</h3>
+      <div class="row g-4">
+          <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
+              <div class="training-item">
+                  <div class="training-inner">
+                      <img src="assets/images/training-1.jpg" class="img-fluid w-100 rounded" alt="Image">
+                      <div class="training-title-name">
+                          <a href="#" class="h4 text-white mb-0">IELTS</a>
+                          <a href="#" class="h4 text-white mb-0">Đào Tạo</a>
                       </div>
                   </div>
-
-                  <div class="col-6 col-md-3">
-                      <div class="count-container text-center">
-                          <div class="count-wrapper text-white">
-                              <span class="count" data-from="0" data-to="20" data-speed="3000" data-refresh-interval="50">0</span>+
-                          </div>
-                          <h3 class="count-title text-white">Năm Kinh nghiệm</h3>
-                      </div>
-                  </div>
-
-                  <div class="col-6 col-md-3">
-                      <div class="count-container text-center">
-                          <div class="count-wrapper text-white">
-                              <span class="count" data-from="0" data-to="95" data-speed="3000" data-refresh-interval="50">0</span>%
-                          </div>
-                          <h3 class="count-title text-white">Khách hàng Quay lại</h3>
-                      </div>
-                  </div>
-
-                  <div class="col-6 col-md-3">
-                      <div class="count-container text-center">
-                          <div class="count-wrapper text-white">
-                              <span class="count" data-from="0" data-to="15" data-speed="3000" data-refresh-interval="50">0</span>
-                          </div>
-                          <h3 class="count-title text-white">Giải thưởng</h3>
-                      </div>
+                  <div class="training-content bg-secondary rounded-bottom p-4">
+                      <a href="#"><h4 class="text-white">Đào Tạo IELTS</h4></a>
+                      <p class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, veritatis.</p>
+                      <a class="btn btn-secondary rounded-pill text-white p-0" href="#">Xem Thêm <i class="fa fa-arrow-right"></i></a>
                   </div>
               </div>
           </div>
-      </div>
-
-      <!-- Phần Đội ngũ -->
-      <div class="bg-light-2 pt-6 pb-7 mb-6">
-          <div class="container">
-              <h2 class="title text-center mb-4">Gặp gỡ Đội ngũ của chúng tôi</h2>
-
-              <div class="row">
-                  <div class="col-sm-6 col-lg-3">
-                      <div class="member member-2 text-center">
-                          <figure class="member-media">
-                              <img src="assets/images/team/about-2/member-1.jpg" alt="member photo">
-                              <figcaption class="member-overlay">
-                                  <div class="social-icons social-icons-simple">
-                                      <a href="#" class="social-icon" title="Facebook" target="_blank"><i class="icon-facebook-f"></i></a>
-                                      <a href="#" class="social-icon" title="Twitter" target="_blank"><i class="icon-twitter"></i></a>
-                                      <a href="#" class="social-icon" title="Instagram" target="_blank"><i class="icon-instagram"></i></a>
-                                  </div>
-                              </figcaption>
-                          </figure>
-                          <div class="member-content">
-                              <h3 class="member-title">Nguyễn Văn A<span>Founder & CEO</span></h3>
-                          </div>
+          <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
+              <div class="training-item">
+                  <div class="training-inner">
+                      <img src="assets/images/training-2.jpg" class="img-fluid w-100 rounded" alt="Image">
+                      <div class="training-title-name">
+                          <a href="#" class="h4 text-white mb-0">TOEFL</a>
+                          <a href="#" class="h4 text-white mb-0">Đào Tạo</a>
                       </div>
                   </div>
-
-                  <!-- Thêm các thành viên khác tương tự -->
-              </div>
-
-              <div class="text-center mt-3">
-                  <a href="blog.html" class="btn btn-sm btn-minwidth-lg btn-outline-primary-2">
-                      <span>BẮT ĐẦU NGAY</span>
-                      <i class="icon-long-arrow-right"></i>
-                  </a>
+                  <div class="training-content bg-secondary rounded-bottom p-4">
+                      <a href="#"><h4 class="text-white">Đào Tạo TOEFL</h4></a>
+                      <p class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, veritatis.</p>
+                      <a class="btn btn-secondary rounded-pill text-white p-0" href="#">Xem Thêm <i class="fa fa-arrow-right"></i></a>
+                  </div>
               </div>
           </div>
-      </div>
-
-      <!-- Phần Đối tác -->
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-10 offset-lg-1">
-                  <div class="brands-text text-center mx-auto mb-6">
-                      <h2 class="title">Các đối tác hàng đầu trong lĩnh vực visa và xuất nhập cảnh.</h2>
-                      <p>Chúng tôi hợp tác với các tổ chức uy tín trên toàn thế giới để mang đến dịch vụ tốt nhất cho khách hàng.</p>
-                  </div>
-                  <div class="brands-display">
-                      <div class="row justify-content-center">
-                          <div class="col-6 col-sm-4 col-md-3">
-                              <a href="#" class="brand">
-                                  <img src="assets/images/brands/1.png" alt="Brand Name">
-                              </a>
-                          </div>
-
-                          <!-- Thêm các đối tác khác tương tự -->
+          <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
+              <div class="training-item">
+                  <div class="training-inner">
+                      <img src="assets/images/training-3.jpg" class="img-fluid w-100 rounded" alt="Image">
+                      <div class="training-title-name">
+                          <a href="#" class="h4 text-white mb-0">PTE</a>
+                          <a href="#" class="h4 text-white mb-0">Đào Tạo</a>
                       </div>
                   </div>
+                  <div class="training-content bg-secondary rounded-bottom p-4">
+                      <a href="#"><h4 class="text-white">Đào Tạo PTE</h4></a>
+                      <p class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, veritatis.</p>
+                      <a class="btn btn-secondary rounded-pill text-white p-0" href="#">Xem Thêm <i class="fa fa-arrow-right"></i></a>
+                  </div>
               </div>
+          </div>
+          <div class="col-lg-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
+              <div class="training-item">
+                  <div class="training-inner">
+                      <img src="assets/images/training-4.jpg" class="img-fluid w-100 rounded" alt="Image">
+                      <div class="training-title-name">
+                          <a href="#" class="h4 text-white mb-0">OET</a>
+                          <a href="#" class="h4 text-white mb-0">Đào Tạo</a>
+                      </div>
+                  </div>
+                  <div class="training-content bg-secondary rounded-bottom p-4">
+                      <a href="#"><h4 class="text-white">Đào Tạo OET</h4></a>
+                      <p class="text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, veritatis.</p>
+                      <a class="btn btn-secondary rounded-pill text-white p-0" href="#">Xem Thêm <i class="fa fa-arrow-right"></i></a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-12 text-center">
+              <a class="btn btn-primary border-secondary rounded-pill py-3 px-5 wow fadeInUp" data-wow-delay="0.1s" href="#">Xem Thêm</a>
           </div>
       </div>
   </div>
