--- a/src/app/app-layout/about/contact/contact.component.html
+++ b/src/app/app-layout/about/contact/contact.component.html
@@ -1,155 +1,184 @@
-
-  <div class="container">
-  <div class="page-header page-header-big text-center" style="background-image: url('assets/images/contact-header-bg.jpg')">
-    <h1 class="page-title text-white">Contact us<span class="text-white">keep in touch with us</span></h1>
-  </div><!-- End .page-header -->
-  </div><!-- End .container -->
-
-  <div class="page-content pb-0">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 mb-2 mb-lg-0">
-            <h2 class="title mb-1">Contact Information</h2><!-- End .title mb-2 -->
-            <p class="mb-3">Vestibulum volutpat, lacus a ultrices sagittis, mi neque euismod dui, eu pulvinar nunc sapien ornare nisl. Phasellus pede arcu, dapibus eu, fermentum et, dapibus sed, urna.</p>
-            <div class="row">
-              <div class="col-sm-7">
-                <div class="contact-info">
-                  <h3>The Office</h3>
-
-                  <ul class="contact-list">
-                    <li>
-                      <i class="icon-map-marker"></i>
-                      70 Washington Square South New York, NY 10012, United States
-                    </li>
-                    <li>
-                      <i class="icon-phone"></i>
-                      <a href="tel:#">+92 423 567</a>
-                    </li>
-                    <li>
-                      <i class="icon-envelope"></i>
-                      <a href="mailto:#">info@Molla.com</a>
-                    </li>
-                  </ul><!-- End .contact-list -->
-                </div><!-- End .contact-info -->
-              </div><!-- End .col-sm-7 -->
-
-              <div class="col-sm-5">
-                <div class="contact-info">
-                  <h3>The Office</h3>
-
-                  <ul class="contact-list">
-                    <li>
-                      <i class="icon-clock-o"></i>
-                      <span class="text-dark">Monday-Saturday</span> <br>11am-7pm ET
-                    </li>
-                    <li>
-                      <i class="icon-calendar"></i>
-                      <span class="text-dark">Sunday</span> <br>11am-6pm ET
-                    </li>
-                  </ul><!-- End .contact-list -->
-                </div><!-- End .contact-info -->
-              </div><!-- End .col-sm-5 -->
-            </div><!-- End .row -->
-          </div><!-- End .col-lg-6 -->
-          <div class="col-lg-6">
-            <h2 class="title mb-1">Got Any Questions?</h2><!-- End .title mb-2 -->
-            <p class="mb-2">Use the form below to get in touch with the sales team</p>
-
-            <form action="#" class="contact-form mb-3">
-              <div class="row">
-                <div class="col-sm-6">
-                              <label for="cname" class="sr-only">Name</label>
-                  <input type="text" class="form-control" id="cname" placeholder="Name *" required>
-                </div><!-- End .col-sm-6 -->
-
-                <div class="col-sm-6">
-                              <label for="cemail" class="sr-only">Email</label>
-                  <input type="email" class="form-control" id="cemail" placeholder="Email *" required>
-                </div><!-- End .col-sm-6 -->
-              </div><!-- End .row -->
-
-              <div class="row">
-                <div class="col-sm-6">
-                              <label for="cphone" class="sr-only">Phone</label>
-                  <input type="tel" class="form-control" id="cphone" placeholder="Phone">
-                </div><!-- End .col-sm-6 -->
-
-                <div class="col-sm-6">
-                              <label for="csubject" class="sr-only">Subject</label>
-                  <input type="text" class="form-control" id="csubject" placeholder="Subject">
-                </div><!-- End .col-sm-6 -->
-              </div><!-- End .row -->
-
-                      <label for="cmessage" class="sr-only">Message</label>
-              <textarea class="form-control" cols="30" rows="4" id="cmessage" required placeholder="Message *"></textarea>
-
-              <button type="submit" class="btn btn-outline-primary-2 btn-minwidth-sm">
-                <span>SUBMIT</span>
-              <i class="icon-long-arrow-right"></i>
-              </button>
-            </form><!-- End .contact-form -->
-          </div><!-- End .col-lg-6 -->
-        </div><!-- End .row -->
-
-        <hr class="mt-4 mb-5">
-
-        <div class="stores mb-4 mb-lg-5">
-          <h2 class="title text-center mb-3">Our Stores</h2><!-- End .title text-center mb-2 -->
-
-          <div class="row">
-            <div class="col-lg-6">
-              <div class="store">
-                <div class="row">
-                  <div class="col-sm-5 col-xl-6">
-                    <figure class="store-media mb-2 mb-lg-0">
-                      <img src="assets/images/stores/img-1.jpg" alt="image">
-                    </figure><!-- End .store-media -->
-                  </div><!-- End .col-xl-6 -->
-                  <div class="col-sm-7 col-xl-6">
-                    <div class="store-content">
-                      <h3 class="store-title">Wall Street Plaza</h3><!-- End .store-title -->
-                      <address>88 Pine St, New York, NY 10005, USA</address>
-                      <div><a href="tel:#">+1 987-876-6543</a></div>
-
-                      <h4 class="store-subtitle">Store Hours:</h4><!-- End .store-subtitle -->
-                      <div>Monday - Saturday 11am to 7pm</div>
-                      <div>Sunday 11am to 6pm</div>
-
-                      <a href="#" class="btn btn-link" target="_blank"><span>View Map</span><i class="icon-long-arrow-right"></i></a>
-                    </div><!-- End .store-content -->
-                  </div><!-- End .col-xl-6 -->
-                </div><!-- End .row -->
-              </div><!-- End .store -->
-            </div><!-- End .col-lg-6 -->
-
-            <div class="col-lg-6">
-              <div class="store">
-                <div class="row">
-                  <div class="col-sm-5 col-xl-6">
-                    <figure class="store-media mb-2 mb-lg-0">
-                      <img src="assets/images/stores/img-2.jpg" alt="image">
-                    </figure><!-- End .store-media -->
-                  </div><!-- End .col-xl-6 -->
-
-                  <div class="col-sm-7 col-xl-6">
-                    <div class="store-content">
-                      <h3 class="store-title">One New York Plaza</h3><!-- End .store-title -->
-                      <address>88 Pine St, New York, NY 10005, USA</address>
-                      <div><a href="tel:#">+1 987-876-6543</a></div>
-
-                      <h4 class="store-subtitle">Store Hours:</h4><!-- End .store-subtitle -->
-              <div>Monday - Friday 9am to 8pm</div>
-              <div>Saturday - 9am to 2pm</div>
-              <div>Sunday - Closed</div>
-
-                      <a href="#" class="btn btn-link" target="_blank"><span>View Map</span><i class="icon-long-arrow-right"></i></a>
-                    </div><!-- End .store-content -->
-                  </div><!-- End .col-xl-6 -->
-                </div><!-- End .row -->
-              </div><!-- End .store -->
-            </div><!-- End .col-lg-6 -->
-          </div><!-- End .row -->
-        </div><!-- End .stores -->
-      </div><!-- End .container -->
-    <div id="map"></div><!-- End #map -->
-  </div><!-- End .page-content -->
+<div class="container-fluid contact overflow-hidden py-5">
+  <div class="container py-5">
+      <div class="row g-5 mb-5">
+          <div class="col-lg-6 wow fadeInLeft" data-wow-delay="0.1s">
+              <div class="sub-style">
+                  <h5 class="sub-title text-primary pe-3">Liên Hệ Nhanh</h5>
+              </div>
+              <h1 class="display-5 mb-4">Có Câu Hỏi? Đừng Ngần Ngại Liên Hệ Với Chúng Tôi</h1>
+              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat totam deserunt tempora. Tempore neque necessitatibus corporis error earum sint quae?</p>
+              <div class="d-flex border-bottom mb-4 pb-4">
+                  <i class="fas fa-map-marked-alt fa-4x text-primary bg-light p-3 rounded"></i>
+                  <div class="ps-3">
+                      <h5>Địa Chỉ</h5>
+                      <p>123, Tầng 1, 123 Đường Roots Terrace, Los Angeles 90010, Hoa Kỳ.</p>
+                  </div>
+              </div>
+              <div class="row g-3">
+                  <div class="col-xl-6">
+                      <div class="d-flex">
+                          <i class="fas fa-tty fa-3x text-primary"></i>
+                          <div class="ps-3">
+                              <h5 class="mb-3">Liên Hệ Nhanh</h5>
+                              <div class="mb-3">
+                                  <h6 class="mb-0">Điện Thoại:</h6>
+                                  <a href="#" class="fs-5 text-primary">+012 3456 7890</a>
+                              </div>
+                              <div class="mb-3">
+                                  <h6 class="mb-0">Email:</h6>
+                                  <a href="#" class="fs-5 text-primary">travisa@example.com</a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col-xl-6">
+                      <div class="d-flex">
+                          <i class="fas fa-clone fa-3x text-primary"></i>
+                          <div class="ps-3">
+                              <h5 class="mb-3">Giờ Làm Việc</h5>
+                              <div class="mb-3">
+                                  <h6 class="mb-0">Thứ Hai - Thứ Sáu:</h6>
+                                  <a href="#" class="fs-5 text-primary">09:00 sáng đến 07:00 tối</a>
+                              </div>
+                              <div class="mb-3">
+                                  <h6 class="mb-0">Thứ Bảy:</h6>
+                                  <a href="#" class="fs-5 text-primary">10:00 sáng đến 05:00 chiều</a>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="d-flex align-items-center pt-3">
+                  <div class="me-4">
+                      <div class="bg-light d-flex align-items-center justify-content-center" style="width: 90px; height: 90px; border-radius: 10px;"><i class="fas fa-share fa-3x text-primary"></i></div>
+                  </div>
+                  <div class="d-flex">
+                      <a class="btn btn-secondary border-secondary me-2 p-0" href="">facebook <i class="fas fa-chevron-circle-right"></i></a>
+                      <a class="btn btn-secondary border-secondary mx-2 p-0" href="">twitter <i class="fas fa-chevron-circle-right"></i></a>
+                      <a class="btn btn-secondary border-secondary mx-2 p-0" href="">instagram <i class="fas fa-chevron-circle-right"></i></a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-lg-6 wow fadeInRight" data-wow-delay="0.3">
+              <div class="sub-style">
+                  <h5 class="sub-title text-primary pe-3">Hãy Kết Nối</h5>
+              </div>
+              <h1 class="display-5 mb-4">Gửi Tin Nhắn Của Bạn</h1>
+              <p class="mb-3">Hiện tại biểu mẫu liên hệ không hoạt động. Bạn có thể tải về một biểu mẫu liên hệ hoạt động với Ajax & PHP chỉ trong vài phút. Chỉ cần sao chép và dán các tệp, thêm một ít mã và bạn đã hoàn tất. <a class="text-primary fw-bold" href="https://htmlcodex.com/contact-form">Tải Ngay</a>.</p>
+              <form>
+                  <div class="row g-4">
+                      <div class="col-lg-12 col-xl-6">
+                          <div class="form-floating">
+                              <input type="text" class="form-control" id="name" placeholder="Tên Của Bạn">
+                              <label for="name">Tên Của Bạn</label>
+                          </div>
+                      </div>
+                      <div class="col-lg-12 col-xl-6">
+                          <div class="form-floating">
+                              <input type="email" class="form-control" id="email" placeholder="Email Của Bạn">
+                              <label for="email">Email Của Bạn</label>
+                          </div>
+                      </div>
+                      <div class="col-lg-12 col-xl-6">
+                          <div class="form-floating">
+                              <input type="phone" class="form-control" id="phone" placeholder="Điện Thoại">
+                              <label for="phone">Điện Thoại Của Bạn</label>
+                          </div>
+                      </div>
+                      <div class="col-lg-12 col-xl-6">
+                          <div class="form-floating">
+                              <input type="text" class="form-control" id="project" placeholder="Dự Án">
+                              <label for="project">Dự Án Của Bạn</label>
+                          </div>
+                      </div>
+                      <div class="col-12">
+                          <div class="form-floating">
+                              <input type="text" class="form-control" id="subject" placeholder="Chủ Đề">
+                              <label for="subject">Chủ Đề</label>
+                          </div>
+                      </div>
+                      <div class="col-12">
+                          <div class="form-floating">
+                              <textarea class="form-control" placeholder="Để lại tin nhắn ở đây" id="message" style="height: 160px"></textarea>
+                              <label for="message">Tin Nhắn</label>
+                          </div>
+                      </div>
+                      <div class="col-12">
+                          <button class="btn btn-primary w-100 py-3">Gửi Tin Nhắn</button>
+                      </div>
+                  </div>
+              </form>
+          </div>
+      </div>
+      <div class="office pt-5">
+          <div class="section-title text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">
+              <div class="sub-style">
+                  <h5 class="sub-title text-primary px-3">Văn Phòng Toàn Cầu</h5>
+              </div>
+              <h1 class="display-5 mb-4">Khám Phá Văn Phòng Của Chúng Tôi Trên Toàn Thế Giới</h1>
+              <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at atque sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime veniam necessitatibus saepe in ab? Repellat!</p>
+          </div>
+          <div class="row g-4 justify-content-center">
+              <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
+                  <div class="office-item p-4">
+                      <div class="office-img mb-4">
+                          <img src="assets/images/office-2.jpg" class="img-fluid w-100 rounded" alt="">
+                      </div>
+                      <div class="office-content d-flex flex-column">
+                          <h4 class="mb-2">Úc</h4>
+                          <a href="#" class="text-secondary fs-5 mb-2">+123.456.7890</a>
+                          <a href="#" class="text-muted fs-5 mb-2">travisa@example.com</a>
+                          <p class="mb-0">123, Tầng 1, 123 Đường Roots Terrace, Los Angeles 90010, Hoa Kỳ.</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
+                  <div class="office-item p-4">
+                      <div class="office-img mb-4">
+                          <img src="assets/images/office-1.jpg" class="img-fluid w-100 rounded" alt="">
+                      </div>
+                      <div class="office-content d-flex flex-column">
+                          <h4 class="mb-2">Canada</h4>
+                          <a href="#" class="text-secondary fs-5 mb-2">(012) 0345 6789</a>
+                          <a href="#" class="text-muted fs-5 mb-2">travisa@example.com</a>
+                          <p class="mb-0">123, Tầng 1, 123 Đường Roots Terrace, Los Angeles 90010, Hoa Kỳ.</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
+                  <div class="office-item p-4">
+                      <div class="office-img mb-4">
+                          <img src="assets/images/office-3.jpg" class="img-fluid w-100 rounded" alt="">
+                      </div>
+                      <div class="office-content d-flex flex-column">
+                          <h4 class="mb-2">Vương Quốc Anh</h4>
+                          <a href="#" class="text-secondary fs-5 mb-2">01234.567.890</a>
+                          <a href="#" class="text-muted fs-5 mb-2">travisa@example.com</a>
+                          <p class="mb-0">123, Tầng 1, 123 Đường Roots Terrace, Los Angeles 90010, Hoa Kỳ.</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
+                  <div class="office-item p-4">
+                      <div class="office-img mb-4">
+                          <img src="assets/images/office-4.jpg" class="img-fluid w-100 rounded" alt="">
+                      </div>
+                      <div class="office-content d-flex flex-column">
+                          <h4 class="mb-2">Ấn Độ</h4>
+                          <a href="#" class="text-secondary fs-5 mb-2">+123.45.67890</a>
+                          <a href="#" class="text-muted fs-5 mb-2">travisa@example.com</a>
+                          <p class="mb-0">123, Tầng 1, 123 Đường Roots Terrace, Los Angeles 90010, Hoa Kỳ.</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-12 pt-5 wow zoomIn" data-wow-delay="0.1s">
+                  <div class="rounded h-100">
+                      <iframe class="rounded w-100"
+                      style="height: 500px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387191.33750346623!2d-73.97968099999999!3d40.6974881!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1694259649153!5m2!1sen!2sbd"
+                      loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
