--- a/src/app/app-layout/page-heading/page-heading.component.html
+++ b/src/app/app-layout/page-heading/page-heading.component.html
@@ -1,13 +1,32 @@
-<!-- End .page-header -->
- <nav aria-label="breadcrumb" class="breadcrumb-nav">
-          <ol class="breadcrumb">
-              <li class="breadcrumb-item" *ngIf="parts.length >= 0 && parts[0] != null && parts[0] != ''"><a  >{{ parts[0]}}</a></li>
-              <li class="breadcrumb-item" *ngIf="parts.length >= 1 && parts[1] != null && parts[1] != ''"><a >{{ parts[1]}}</a></li>
-              <li class="breadcrumb-item active" *ngIf=" parts.length >= 2 && parts[2] != null && parts[2] != ''" aria-current="page">{{ parts[2]}}</li>
-          </ol>
-</nav><!-- End .breadcrumb-nav -->
-<div class="page-header text-center" style="background-image: url('assets/images/page-header-bg.jpg')" *ngIf="pageHeading.isShow">
-  <div class="container">
-    <h1 class="page-title">{{pageHeading.menu.label}}</h1>
-  </div><!-- End .container -->
+<!-- Breadcrumb Navigation -->
+<nav aria-label="breadcrumb" class="breadcrumb-nav">
+  <ol class="breadcrumb">
+      <li class="breadcrumb-item" *ngIf="parts.length >= 0 && parts[0] != null && parts[0] != ''">
+          <a class="text-white">{{ parts[0] }}</a>
+      </li>
+      <li class="breadcrumb-item" *ngIf="parts.length >= 1 && parts[1] != null && parts[1] != ''">
+          <a class="text-white">{{ parts[1] }}</a>
+      </li>
+      <li class="breadcrumb-item active text-secondary" *ngIf="parts.length >= 2 && parts[2] != null && parts[2] != ''" aria-current="page">
+          {{ parts[2] }}
+      </li>
+  </ol>
+</nav>
+
+<!-- Page Heading -->
+<div class="container-fluid bg-breadcrumb" *ngIf="pageHeading.isShow">
+  <div class="container text-center py-5" style="max-width: 900px;">
+      <h3 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">{{ pageHeading.menu.label }}</h3>
+      <ol class="breadcrumb justify-content-center text-white mb-0 wow fadeInDown" data-wow-delay="0.3s">
+          <li class="breadcrumb-item" *ngIf="parts.length >= 0 && parts[0] != null && parts[0] != ''">
+              <a href="index.html" class="text-white">{{ parts[0] }}</a>
+          </li>
+          <li class="breadcrumb-item" *ngIf="parts.length >= 1 && parts[1] != null && parts[1] != ''">
+              <a href="#" class="text-white">{{ parts[1] }}</a>
+          </li>
+          <li class="breadcrumb-item active text-secondary" *ngIf="parts.length >= 2 && parts[2] != null && parts[2] != ''" aria-current="page">
+              {{ parts[2] }}
+          </li>
+      </ol>
+  </div>
 </div>
