--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -338,6 +338,7 @@
 
 /*** Single Page Hero Header Start ***/
 .bg-breadcrumb {
+  background: linear-gradient(rgba(0, 58, 102, 0.9), rgba(0, 58, 102, 0.8)), url(../../assets/images/travel/breadcrumb.png);
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: initial;
@@ -440,6 +441,7 @@
 
 /*** Counter Facts Start ***/
 .counter-facts {
+  background: linear-gradient(rgba(255, 255, 255, .9), rgba(255, 255, 255, 0.8)), url(../../assets/images/travel/breadcrumb.png);
   background-size: cover;
   background-attachment: fixed;
   background-position: center center;
